# advent_of_code_2023

./: README.md
day1_trebuchet/: 1  dune-project
day1_trebuchet/lib/: dune
day1_trebuchet/test/: dune
day1_trebuchet_part_2/: day1_trebuchet_part_2  dune-project
day1_trebuchet_part_2/lib/: dune
day1_trebuchet_part_2/test/: dune
day2_code_conundrum/: dune-project
day2_code_conundrum/lib/: dune
day2_code_conundrum/test/: dune
day2_code_conundrum_part_2/: 1  dune-project
day2_code_conundrum_part_2/lib/: dune
day2_code_conundrum_part_2/test/: dune
day3_gear_ratios/: dune-project
day3_gear_ratios/lib/: dune
day3_gear_ratios/test/: dune
